环境变量不再必须提供

--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "env": {
         "rclone": {
             "description": "$HOME/.config/rclone/rclone.conf",
-            "value": ""
+            "value": "",
+            "required": false
         }
     },
     "stack": "container"
